--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,68 @@
-body {
-    font-family: "Lexend", sans-serif;
-    font-optical-sizing: auto;
-    font-size: 24px;
-    color: var(--text-color);
-    font-weight: 400; 
-    box-sizing: border-box;
-    position: relative;
-    background-color: var(--black);
+
+:root {
+    --black-color: #000000;
+    --white-color: #ffffff;
+    --main-color: #3E9CDC;
+    --border-color:#6F6D7B;
+    --border-color:#286690;
+    --text-color:#C3C3C3;
+    
+    --header-bg-color:#10101Daa;
+    --footer-bg-color:#3D4050;
+    --transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    --container:1172px;
 }
+
+html,
+body {
+	height: 100%;
+    font-family: "Lato", sans-serif;
+    background: var(--header-bg-color);
+    /* color: var(--text-color); */
+    
+}
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.container{
+    max-width: calc(var(--container) + 10px + 10px );
+    margin-inline:auto;
+    padding-inline: 10px;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
+    width: 100%;
+    height: 80px;
+    background-color: var(--footer-bg-color);
+}
+
+h1{
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 58px;
+    color: var(--black-color);
+    text-transform: uppercase;
+};
+
+h1 b{
+
+    color: #ffffff!important;
+};
+
+h2{
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 43px;
+    color: var(--black-color);
+    text-transform: uppercase;
+};
+/* h2 b{
+    font-weight: 800;
+    color: var(--main-color);
+};  */
