--- a/styles/style.css
+++ b/styles/style.css
@@ -10,59 +10,103 @@
     --header-bg-color:#10101Daa;
     --footer-bg-color:#3D4050;
     --transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
-
-    --container:1172px;
+    
+    --container: 1172px;
 }
 
 html,
 body {
-	height: 100%;
+    height: 100%;
     font-family: "Lato", sans-serif;
     background: var(--header-bg-color);
     /* color: var(--text-color); */
-    
 }
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
-.container{
-    max-width: calc(var(--container) + 10px + 10px );
-    margin-inline:auto;
+.container {
+    max-width: calc(var(--container) + 10px + 10px);
+    margin-inline: auto;
     padding-inline: 10px;
 }
 .content {
-	flex: 1 0 auto;
+    flex: 1 0 auto;
 }
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--header-bg-color);
+}
+.header__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    color: var(--white-color);
+}
+.menu{
+    display: flex;
+    gap: 45px;
+
+}
+.menu__item{
+    cursor: pointer;
+    padding: 5px;
+    font-weight: 400;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+.menu__item:hover{
+    color: var(--main-color);
+}
+
+.main{
+    /* background-color: aqua; */
+}
+
+section.lable {
+    padding-top: 100px;
+}
+
 .footer {
-	flex: 0 0 auto;
+    flex: 0 0 auto;
     width: 100%;
     height: 80px;
     background-color: var(--footer-bg-color);
+    color: var(--text-color);
+    font-size: 14px;
+    padding-block: 30px;
+    
+}
+.footer__container{
+    display: flex;
+    
+    justify-content: space-between;
+}
+.footer__copyright{
+    width: 33%;
+}
+.footer__wallets{
+    display: flex;
+    width: 33%;
+    justify-content: space-around;
+}
+.wallet{
+    display: flex;
 }
 
-h1{
-    font-weight: 500;
-    font-size: 48px;
-    line-height: 58px;
-    color: var(--black-color);
-    text-transform: uppercase;
-};
+.footer__contacts{
+    display: flex;
+    width: 33%;
+    justify-content: space-around;
+}
+.contact{
+    display: flex;
+}
 
-h1 b{
 
-    color: #ffffff!important;
-};
-
-h2{
-    font-weight: 800;
-    font-size: 36px;
-    line-height: 43px;
-    color: var(--black-color);
-    text-transform: uppercase;
-};
-/* h2 b{
-    font-weight: 800;
-    color: var(--main-color);
-};  */
