--- a/styles/text-styles.css
+++ b/styles/text-styles.css
@@ -1,32 +1,23 @@
-:root {
-    --black-color: #000000;
-    --white-color: #ffffff;
-    --main-color: #3e9cdc;
-    --border-color: #6f6d7b;
-    --border-color: #286690;
-    --text-color: #c3c3c3;
-
-    --header-bg-color: #10101daa;
-    --footer-bg-color: #3d4050;
-    --transition: 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
 
 h1 {
     color: var(--black-color);
     font-weight: 700;
     font-size: 48px;
     line-height: 48px;
+    text-transform: uppercase;
 }
 
-h1 b {
+h1 b{
     color: var(--main-color);
 }
+
+
 h2 {
     color: var(--black-color);
     font-weight: 800;
     font-size: 36px;
     line-height:43px;
+    text-transform: uppercase;
 }
 
 h2 b {
