--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,6 +4,8 @@
     background-color: var(--footer-bg-color);
     color: var(--text-color);
     font-size: 14px;
+    position: relative;
+    z-index: 2;
 }
 .footer__container {
     display: flex;
