--- a/styles/text-styles.css
+++ b/styles/text-styles.css
@@ -2,24 +2,48 @@
 h1 {
     color: var(--black-color);
     font-weight: 700;
-    font-size: 48px;
-    line-height: 48px;
+    /* font-size: 48px; */
+    font-size: calc(24px + (21 + 21 * 0.7) * ((100vw - 320px) / 1172));
+    line-height: 58px;
     text-transform: uppercase;
 }
+
 
 h1 b{
     color: var(--main-color);
 }
+@media (min-width: 1172px) {
+    h1{
+        font-size:50px;
+    }
+}
 
+.large-letter-spacing{
+    letter-spacing: 1px;
+}
 
 h2 {
-    color: var(--black-color);
-    font-weight: 800;
-    font-size: 36px;
+    color: var(--white-color);
+    font-weight: 600;
+    letter-spacing: 1px;
+    font-size: calc(18px + (16 + 16 * 0.7) * ((100vw - 320px) / 1172));
     line-height:43px;
     text-transform: uppercase;
+}
+@media (min-width: 1172px) {
+    h2{
+        font-size:38px;
+    }
 }
 
 h2 b {
     color: var(--main-color);
+}
+.text{
+    font-size: calc(14px + (4 + 4 * 0.7) * ((100vw - 320px) / 1172));
+}
+@media (min-width: 1172px) {
+    .text{
+        font-size:19px;
+    }
 }
