[fix] url in styles

--- a/styles/section-lable.css
+++ b/styles/section-lable.css
@@ -1,5 +1,5 @@
 .lable {
-    background-image: url("src/img/main_section_lable/bg.jpg");
+    background-image: url("../src/img/main_section_lable/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 70% top;
