--- a/styles/section-order.css
+++ b/styles/section-order.css
@@ -1,5 +1,5 @@
 .order {
-    background-image: url("src/img/main_section_order/bg.jpg");
+    background-image: url("../src/img/main_section_order/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
