--- a/styles/section-order.css
+++ b/styles/section-order.css
@@ -126,6 +126,9 @@
     color: var(--black-color);
     border-radius: 4px;
     font-size: 18px;
+    -webkit-appearance: none; 
+    -moz-appearance: none;    
+    appearance: none;         
 }
 
 .form-select {
