--- a/styles/section-order.css
+++ b/styles/section-order.css
@@ -128,8 +128,22 @@
     font-size: 18px;
     -webkit-appearance: none; 
     -moz-appearance: none;    
-    appearance: none;         
+    appearance: none; 
+    cursor: pointer;   
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
+.form-item select{
+    background-image: url('../src/img/v.svg');
+    background-position: right 10px center;
+    background-repeat: no-repeat;
+    background-size: 12px 12px;
+}
+
+
+
 
 .form-select {
     grid-area: select;
