--- a/styles/section-lable.css
+++ b/styles/section-lable.css
@@ -49,6 +49,14 @@
 }
 @media (max-width: 768px) {
     .lable__buttons {
+        margin-top: 50px;
+        padding-bottom: 50px;
+        display: flex;
+        gap:15px;
+    }
+}
+@media (max-width: 768px) {
+    .lable__buttons {
         flex-direction: column;
     }
 }
